--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -16,17 +16,17 @@
 
     <label for="lastName">Last Name</label>
     <input type="text" th:field="*{lastName}">
-
+    <br><br>
     <label for="username">Username</label>
     <input type="text" th:field="*{username}">
+<!--    <div th:if="${usernameError != null}" th:text="${usernameError}"></div>-->
 
     <label for="password">Password</label>
     <input type="text" th:field="*{password}">
 
     <label for="roles">Roles</label>
     <select th:name="role" th:id="roles">
-        <option value="ROLE_ADMIN">Admin</option>
-        <option value="ROLE_USER">User</option>
+        <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
     </select>
 
     <button type="submit">Submit</button>
