--- a/src/main/resources/templates/kek.html
+++ b/src/main/resources/templates/kek.html
@@ -8,7 +8,10 @@
 <h1>User, welcome spring boot security page!</h1>
 
 <a th:href="@{/user}">to user</a>
+<br>
 <a th:href="@{/admin}">to admin</a>
+<br>
+<a th:href="@{/test}">to test</a>
 
 </body>
 </html>
