--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,12 +12,16 @@
     <tr>
         <th>Name</th>
         <th>Last Name</th>
+        <th>Age</th>
+        <th>Email</th>
     </tr>
     </thead>
     <tbody>
     <tr th:object="${userForm}">
         <td th:text="${userForm.getFirstName()}">Name</td>
         <td th:text="${userForm.getLastName()}">Last Name</td>
+        <td th:text="${userForm.getAge()}">Age</td>
+        <td th:text="${userForm.getEmail()}">Email</td>
     </tr>
     </tbody>
 </table>
