admin panel done

--- a/src/main/resources/templates/overlay.html
+++ b/src/main/resources/templates/overlay.html
@@ -11,46 +11,14 @@
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
         <div>
-            <span style="font-size: x-large; font-weight: bold" class="text-white" th:text="${userForm.getEmail()}"></span>
-            <a class="text-white" style="text-decoration: none;" th:text="' with roles: '"></a>
+            <span style="font-size: x-large; font-weight: bold" class="text-white"
+                  th:text="${userForm.getEmail()}"></span>
+            <span class="text-white" style="text-decoration: none;" th:text="' with roles: '"></span>
             <span style="font-size: larger;" class="text-white" th:text="${userForm.getAllRolesString()}"></span>
         </div>
-
-        <!--        <a class="navbar-brand text-white" th:href="@{/}">Navbar</a>-->
-<!--        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"-->
-<!--                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
-<!--        <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--            <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Link</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item dropdown">-->
-<!--                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
-<!--                       aria-expanded="false">-->
-<!--                        Dropdown-->
-<!--                    </a>-->
-<!--                    <ul class="dropdown-menu">-->
-<!--                        <li><a class="dropdown-item" href="#">Action</a></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Another action</a></li>-->
-<!--                        <li>-->
-<!--                            <hr class="dropdown-divider">-->
-<!--                        </li>-->
-<!--                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-            <form class="d-flex" th:action="@{/logout}" method="post">
-                <button class="btn transparent-btn text-dark-emphasis" type="submit">Logout</button>
-            </form>
-<!--        </div>-->
+        <form class="d-flex" th:action="@{/logout}" method="post">
+            <button class="btn transparent-btn text-dark-emphasis" type="submit">Logout</button>
+        </form>
     </div>
 </nav>
 </body>
