--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,50 +1,78 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
-    <title>User List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Admin</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <div th:replace="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-2 p-0" style="max-width: 200px">
+            <div th:replace="sidebar">
+            </div>
+        </div>
+        <div class="col-lg-10 bg-light p-3">
+            <div class="container-fluid">
+                <H1>Admin Panel</H1>
+                <ul class="list-group">
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="admin">Users table</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="addUser">New User</a>
+                        </li>
+                    </ul>
+                    <li class="list-group-item bg-light text-dark">All users</li>
+                    <li class="list-group-item">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Age</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Role</th>
+                                <th scope="col">Edit</th>
+                                <th scope="col">Delete</th>
+                            </tr>
+                            </thead>
+                            <tbody class="table-group-divider">
+                            <tr th:each="user : ${userList}">
+                                <td th:text="${user.getId()}">ID</td>
+                                <td th:text="${user.getFirstName()}">First Name</td>
+                                <td th:text="${user.getLastName()}">Last Name</td>
+                                <td th:text="${user.getAge()}">Age</td>
+                                <td th:text="${user.getEmail()}">Email</td>
+                                <td th:text="${user.getAllRolesString()}">Roles</td>
+                                <td>
+                                    <form th:action="updateUser" method="post">
+                                        <input type="hidden" name="id" th:value="${user.getId()}">
+                                        <button type="submit" class="btn btn-info">Edit</button>
+                                    </form>
+                                </td>
+                                <td>
+                                    <form th:action="deleteUser" method="post">
+                                        <input type="hidden" name="id" th:value="${user.getId()}">
+                                        <button type="submit" class="btn btn-danger">Delete</button>
+                                    </form>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h2> ADMIN </h2>
-<table>
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Last Name</th>
-        <th>Age</th>
-        <th>Email</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${userList}">
-        <td th:text="${user.getFirstName()}">Name</td>
-        <td th:text="${user.getLastName()}">Last Name</td>
-        <td th:text="${user.getAge()}">Age</td>
-        <td th:text="${user.getEmail()}">Email</td>
-        <td>
-            <form th:action="updateUser" method="post">
-                <input type="hidden" name="id" th:value="${user.getId()}">
-                <button type="submit">Update user</button>
-            </form>
-        </td>
-        <td>
-            <form th:action="deleteUser" method="post">
-                <input type="hidden" name="id" th:value="${user.getId()}">
-                <button type="submit">Delete user</button>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<br>
-<form th:action="addUser" method="get">
-    <button type="submit">Add User</button>
-</form>
-<br>
-<div th:replace="logout-button"></div>
 </body>
 </html>
