--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.w3.org/1999/xhtml">
+>
 
 <head>
     <meta charset="UTF-8">
@@ -11,68 +11,51 @@
 </head>
 <body>
 <div th:replace="overlay"></div>
+
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-2 p-0" style="max-width: 200px">
-            <div th:replace="sidebar">
-            </div>
-        </div>
+        <div th:replace="sidebar"></div>
         <div class="col-lg-10 bg-light p-3">
             <div class="container-fluid">
-                <H1>Admin Panel</H1>
-                <ul class="list-group">
-                    <ul class="nav nav-tabs">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="admin">Users table</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="addUser">New User</a>
-                        </li>
-                    </ul>
-                    <li class="list-group-item bg-light text-dark">All users</li>
-                    <li class="list-group-item">
-                        <table class="table table-hover">
-                            <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">First Name</th>
-                                <th scope="col">Last Name</th>
-                                <th scope="col">Age</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Edit</th>
-                                <th scope="col">Delete</th>
-                            </tr>
-                            </thead>
-                            <tbody class="table-group-divider">
-                            <tr th:each="user : ${userList}">
-                                <td th:text="${user.getId()}">ID</td>
-                                <td th:text="${user.getFirstName()}">First Name</td>
-                                <td th:text="${user.getLastName()}">Last Name</td>
-                                <td th:text="${user.getAge()}">Age</td>
-                                <td th:text="${user.getEmail()}">Email</td>
-                                <td th:text="${user.getAllRolesString()}">Roles</td>
-                                <td>
-                                    <form th:action="updateUser" method="post">
-                                        <input type="hidden" name="id" th:value="${user.getId()}">
-                                        <button type="submit" class="btn btn-info">Edit</button>
-                                    </form>
-                                </td>
-                                <td>
-                                    <form th:action="deleteUser" method="post">
-                                        <input type="hidden" name="id" th:value="${user.getId()}">
-                                        <button type="submit" class="btn btn-danger">Delete</button>
-                                    </form>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </li>
-                </ul>
+                <H1>Admin panel</H1>
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                        <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab"
+                                data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
+                                aria-selected="true">Users table
+                        </button>
+                        <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
+                                type="button" role="tab" aria-controls="nav-profile" aria-selected="false">New User
+                        </button>
+                    </div>
+                </nav>
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
+                         tabindex="0">
+                        <ul class="list-group">
+                            <li class="list-group-item bg-light text-dark">All users</li>
+                            <li class="list-group-item">
+                                <div th:replace="users-table"></div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"
+                         tabindex="0">
+                        <ul class="list-group">
+                            <li class="list-group-item bg-light text-dark">Add new user</li>
+                            <li class="list-group-item">
+                                <div th:replace="add-user-form"></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
