--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,15 +8,28 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<div class="d-flex flex-column vh-100" style="max-width: 100%">
+<div class="d-flex flex-column vh-100" style="width: 200px;">
     <ul class="nav nav-pills flex-column bg-white">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="admin">Admin</a>
+        <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+            <a class="nav-link" aria-current="page" href="/admin">Admin</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="user">User</a>
+        <li class="nav-item" sec:authorize="hasRole('ROLE_USER')">
+            <a class="nav-link" href="/user">User</a>
         </li>
     </ul>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var url = window.location.pathname;
+        var navLinks = document.querySelectorAll(".nav-link");
+        navLinks.forEach(function (link) {
+            if (link.getAttribute("href") === url) {
+                link.classList.add("active");
+            }
+        });
+    });
+</script>
 
 </html>
