password encoder added

--- a/src/main/resources/templates/add-user-form.html
+++ b/src/main/resources/templates/add-user-form.html
@@ -27,6 +27,9 @@
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" th:field="*{email}" id="email">
 
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" th:field="*{username}" id="username">
+
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" th:field="*{password}" id="password">
 
