--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -1,40 +1,40 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
 
-<h2>User editing</h2>
+<!--<h2>User editing</h2>-->
 
-<form th:action="register" th:method="post" th:object="${userForm}">
-    <input type="hidden" name="id" th:value="${userForm.getId()}">
+<!--<form th:action="register" th:method="post" th:object="${userForm}">-->
+<!--    <input type="hidden" name="id" th:value="${userForm.getId()}">-->
 
-    <label>First Name</label>
-    <input type="text" th:field="*{firstName}">
-    <br><br>
-    <label>Last Name</label>
-    <input type="text" th:field="*{lastName}">
-    <br><br>
-    <label>Email</label>
-    <input type="email" th:field="*{email}">
-    <br><br>
-    <label>Age</label>
-    <input type="number" th:field="*{age}">
-    <br><br>
-    <label>Username</label>
-    <input type="text" th:field="*{username}">
-    <br><br>
-    <label>Password</label>
-    <input type="text" th:field="*{password}">
-    <br><br>
-    <label>Roles</label>
-    <select th:name="role" th:id="roles">
-        <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
-    </select>
+<!--    <label>First Name</label>-->
+<!--    <input type="text" th:field="*{firstName}">-->
+<!--    <br><br>-->
+<!--    <label>Last Name</label>-->
+<!--    <input type="text" th:field="*{lastName}">-->
+<!--    <br><br>-->
+<!--    <label>Email</label>-->
+<!--    <input type="email" th:field="*{email}">-->
+<!--    <br><br>-->
+<!--    <label>Age</label>-->
+<!--    <input type="number" th:field="*{age}">-->
+<!--    <br><br>-->
+<!--    <label>Username</label>-->
+<!--    <input type="text" th:field="*{username}">-->
+<!--    <br><br>-->
+<!--    <label>Password</label>-->
+<!--    <input type="text" th:field="*{password}">-->
+<!--    <br><br>-->
+<!--    <label>Roles</label>-->
+<!--    <select th:name="role" th:id="roles">-->
+<!--        <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>-->
+<!--    </select>-->
 
-    <button type="submit">Submit</button>
-</form>
-</body>
-</html>
+<!--    <button type="submit">Submit</button>-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
