--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
-                         tabindex="0">
+                         tabindex="-1" th:selected="true">
                         <ul class="list-group">
                             <li class="list-group-item bg-light text-dark">All users</li>
                             <li class="list-group-item">
@@ -39,7 +39,7 @@
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"
-                         tabindex="0">
+                         tabindex="-1" th:selected="false">
                         <ul class="list-group">
                             <li class="list-group-item bg-light text-dark">Add new user</li>
                             <li class="list-group-item">
@@ -54,5 +54,6 @@
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/js/app2.js"></script>
 </body>
 </html>
