--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <br><br>
+<div th:if="${param.error}">
+    <p th:text="${param.error}" style="color: red;"></p>
+</div>
 <form th:action="@{login}" th:method="post" style="max-width: 300px; max-height: 200px; margin: auto">
     <div class="form-group">
         <h1 class="font-weight-bold">Please sign in</h1>
@@ -25,6 +28,7 @@
         <button type="submit" class="btn btn-primary" style="width: 100%; height: 50px; font-size: 18px">Sign in
         </button>
     </div>
+
 </form>
 </body>
 </html>
