--- a/src/main/resources/templates/users-table.html
+++ b/src/main/resources/templates/users-table.html
@@ -10,90 +10,47 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<table class="table table-hover" th:id="userTable">
-    <thead>
-    <tr>
-        <th scope="col">ID</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
-        <th scope="col">Age</th>
-        <th scope="col">Email</th>
-        <th scope="col">Role</th>
-        <th scope="col">Edit</th>
-        <th scope="col">Delete</th>
-    </tr>
-    </thead>
-    <tbody class="table-group-divider" th:id="userTableBody">
-    <!--    <tr th:each="user : ${userList}">-->
-    <!--        <td th:text="${user.getId()}">ID</td>-->
-    <!--        <td th:text="${user.getFirstName()}">First Name</td>-->
-    <!--        <td th:text="${user.getLastName()}">Last Name</td>-->
-    <!--        <td th:text="${user.getAge()}">Age</td>-->
-    <!--        <td th:text="${user.getEmail()}">Email</td>-->
-    <!--        <td th:text="${user.getAllRolesString()}">Roles</td>-->
-    <!--        <td>-->
-    <!--            <button type="button" class="btn btn-info"-->
-    <!--                    data-bs-toggle="modal" th:data-bs-target="'#editUser_' + ${user.getId()}">-->
-    <!--                Edit-->
-    <!--            </button>-->
-    <!--            <div th:replace="edit-user-button"></div>-->
-    <!--        </td>-->
-    <!--            <td>-->
-    <!--                <button type="button" class="btn btn-danger"-->
-    <!--                        data-bs-toggle="modal" th:data-bs-target="'#deleteUser_' + ${user.getId()}">-->
-    <!--                    Delete-->
-    <!--                </button>-->
-    <!--                <div th:replace="delete-user-button"></div>-->
-    <!--            </td>-->
-    <!--    </tr>-->
-    </tbody>
-</table>
+<div>
+    <table class="table table-hover" id="userTable">
+        <thead>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Age</th>
+            <th scope="col">Email</th>
+            <th scope="col">Role</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+        </tr>
+        </thead>
+        <tbody class="table-group-divider" id="userTableBody">
+        </tbody>
+    </table>
+</div>
+
+<div class="modal fade" id="someDefaultModal" tabindex="-1" role="dialog" aria-labelledby="someDefaultModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+
+            </div>
+
+            <div class="modal-body">
+            </div>
+
+            <div class="modal-footer">
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
 
-    fetch('/api/users/')
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('Request failed');
-            }
-
-            return response.json();
-        })
-        .then(users => {
-            const userTableBody = document.getElementById('userTableBody');
-            users.forEach(user => {
-                console.log(JSON.stringify(user.roles));
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                <td>${user.id}</td>
-                <td>${user.firstName}</td>
-                <td>${user.lastName}</td>
-                <td>${user.age}</td>
-                <td>${user.email}</td>
-                <td>${user.roles.map(role => role.name).join(', ')}</td>
-                <td>
-                <button type="button" class="btn btn-info"
-                        data-bs-toggle="modal" th:data-bs-target="'#editUser_' + ${user.id}">
-                    Edit
-                </button>
-                <div th:replace="edit-user-button"></div>
-                </td>
-                <td>
-                <button type="button" class="btn btn-danger"
-                        data-bs-toggle="modal" th:data-bs-target="'#deleteUser_' + ${user.id}">
-                    Delete
-                </button>
-                <div th:replace="delete-user-button"></div>
-                </td>
-                `;
-
-                userTableBody.appendChild(row);
-            });
-        })
-        .catch(error => {
-            console.error('problem', error)
-        })
-
-</script>
 </html>
