--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
-                         tabindex="-1" th:selected="true">
+                         tabindex="-1" aria-selected="true">
                         <ul class="list-group">
                             <li class="list-group-item bg-light text-dark">All users</li>
                             <li class="list-group-item">
@@ -39,7 +39,7 @@
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"
-                         tabindex="-1" th:selected="false">
+                         tabindex="-1" aria-selected="false">
                         <ul class="list-group">
                             <li class="list-group-item bg-light text-dark">Add new user</li>
                             <li class="list-group-item">
