--- a/src/main/resources/templates/add-user-form.html
+++ b/src/main/resources/templates/add-user-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 <div class="container text-center">
     <div class="col-md-2 mx-auto">
         <div class="form-group align-items-center">
-            <form id="defaultSomeForm">
+            <form id="defaultForm">
                 <div>
                     <label for="firstName" class="form-label">First Name</label>
                     <input type="text" class="form-control" id="firstName">
@@ -37,7 +37,7 @@
                     <select class="form-select" id="roles" multiple>
                     </select>
                     <br>
-                    <button type="submit" class="btn btn-success" id="addButton">Submit</button>
+                    <button type="button" class="btn btn-success" id="addButton">Submit</button>
                 </div>
             </form>
         </div>
