--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -42,7 +42,7 @@
                          tabindex="-1" aria-selected="false">
                         <ul class="list-group">
                             <li class="list-group-item bg-light text-dark">Add new user</li>
-                            <li class="list-group-item">
+                            <li class="list-group-item" id="addingUserForm">
                                 <div th:replace="add-user-form"></div>
                             </li>
                         </ul>
@@ -54,6 +54,6 @@
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/app2.js"></script>
+<script src="/js/admin.js"></script>
 </body>
 </html>
