added swagger, some constraints, exception handlers and other

--- a/src/main/resources/templates/add-user-form.html
+++ b/src/main/resources/templates/add-user-form.html
@@ -25,7 +25,7 @@
                     <input type="number" class="form-control" id="age">
 
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email">
+                    <input type="text" class="form-control" id="email">
 
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username">
