--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
         <h1 class="font-weight-bold">Please sign in</h1>
     </div>
     <div class="form-group">
-        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
+        <input type="text" class="form-control" id="InputEmail" aria-describedby="emailHelp"
                placeholder="Email address" th:name="username">
     </div>
     <div class="form-group">
